feat: add production file storage and external minio mode